This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Jan-2004 (Lars Duening)  (3.3.657)
  - (array.c) Efun unique_array() no longer leaks memory if aborted
       by an exception (Bug #0000345).

14-Jan-2004 (Lars Duening)  (3.3.656)
  - (gcollect.c, object.c) The GC forgot to clean out the refcounts
       of the names of the destructed objects, which meant that if
       the destructed object was held by a self-reference, the name
       would receive an extra reference count and leak until the
       next GC (Bug #0000343).

14-Jan-2004 (Lars Duening)  (3.3.655)
  - (backend.c) Tweak to the process_objects() loop: the loop now
       really allows to have a given number of objects being cleant
       per loop, not just checked for being cleanable.

14-Jan-2004 (Lars Duening)  (3.3.654)
  - (smalloc.c) Small block splits now make sure, that the remaining
       block has a minimum size. This size is currently configured
       to 3 words = 12 Bytes, as the driver doesn't need that many
       of the even smaller blocks.
  - (object, gcollect.c, backend.c) The data cleanup is now timed
       independent of the time of the last reference: similar to
       reset the cleanup takes place in random intervals based
       on the configured cleanup-time (or one hour if the cleanup-time
       is 0).

13-Jan-2004 (Lars Duening)  (3.3.653)
  - (util/xerq/erq.c) The erq didn't check if the calculated timeout
       for the next select() had become negative. (Bug #0000342).

12-Jan-2004 (Lars Duening)  (3.3.652)
  - (mapping.c) Indexing a 0-width mapping returned pointers to memory outside
       the mapping, causing weird crashes. The solution is to return pointers
       to the global const1 (when found), or to a local svalue-0 instance
       (when not found and a lvalue is requested) (Bug #0000341).

10-Jan-2004 (Lars Duening)  (3.3.651)